// Kandura E-Commerce Database Schema
// Use this code at: https://dbdiagram.io

// ==================== USERS ====================

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  phone_number varchar [unique]
  password varchar
  Profile_image text
  is_active boolean [default: true]
  email_verified_at timestamp
  fcm_token varchar
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table cities {
  id bigint [pk, increment]
  name json
  created_at timestamp
  updated_at timestamp
}

Table addresses {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  city_id bigint [ref: > cities.id]
  area varchar
  street varchar
  Langitude decimal
  Longitude decimal
  notes text
  created_at timestamp
  updated_at timestamp
}

// ==================== WALLETS ====================

Table wallets {
  id bigint [pk, increment]
  user_id bigint [unique, ref: > users.id]
  balance decimal [default: 0.00]
  created_at timestamp
  updated_at timestamp
}

Table wallet_transactions {
  id bigint [pk, increment]
  wallet_id bigint [ref: > wallets.id]
  admin_id bigint [ref: > users.id]
  type enum_wallet_type
  amount decimal
  balance_before decimal
  balance_after decimal
  notes text
  created_at timestamp
  updated_at timestamp
}

Enum enum_wallet_type {
  deposit
  withdraw
}

// ==================== DESIGNS ====================

Table designs {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  name json
  description json
  price double
  quantity int
  created_at timestamp
  updated_at timestamp
}

Table images {
  id bigint [pk, increment]
  design_id bigint [ref: > designs.id]
  image_path varchar
  created_at timestamp
  updated_at timestamp
}

Table sizes {
  id bigint [pk, increment]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table design_size {
  id bigint [pk, increment]
  design_id bigint [ref: > designs.id]
  size_id bigint [ref: > sizes.id]
  created_at timestamp
  updated_at timestamp
}

Table design_options {
  id bigint [pk, increment]
  name json
  type varchar
  created_at timestamp
  updated_at timestamp
}

Table design_design_options {
  id bigint [pk, increment]
  design_id bigint [ref: > designs.id]
  design_options_id bigint [ref: > design_options.id]
  created_at timestamp
  updated_at timestamp
}

// ==================== ORDERS ====================

Table orders {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  address_id bigint [ref: > addresses.id]
  coupon_id bigint [ref: > coupons.id]
  status enum_order_status [default: 'pending']
  total_price decimal
  notes text
  created_at timestamp
  updated_at timestamp
}

Enum enum_order_status {
  pending
  processing
  completed
  cancelled
}

Table design_order {
  id bigint [pk, increment]
  design_id bigint [ref: > designs.id]
  order_id bigint [ref: > orders.id]
  size_id bigint [ref: > sizes.id]
  quantity int
  unit_price decimal
  created_at timestamp
  updated_at timestamp
}

Table design_option_selected {
  id bigint [pk, increment]
  design_order_id bigint [ref: > design_order.id]
  design_option_id bigint [ref: > design_options.id]
  created_at timestamp
  updated_at timestamp
}

// ==================== PAYMENTS ====================

Table payments {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  user_id bigint [ref: > users.id]
  payment_method varchar [default: 'card']
  stripe_payment_intent_id varchar
  stripe_session_id varchar
  stripe_charge_id varchar
  amount decimal
  status enum_payment_status [default: 'pending']
  currency varchar [default: 'usd']
  failure_reason text
  metadata text
  paid_at timestamp
  created_at timestamp
  updated_at timestamp
}

Enum enum_payment_status {
  pending
  completed
  failed
  refunded
}

Table invoices {
  id bigint [pk, increment]
  invoice_number varchar [unique]
  order_id bigint [ref: > orders.id]
  total decimal
  pdf_url varchar
  created_at timestamp
  updated_at timestamp
}

// ==================== COUPONS ====================

Table coupons {
  id bigint [pk, increment]
  code varchar [unique]
  type enum_coupon_type
  amount decimal
  max_uses int
  used_count int [default: 0]
  starts_at timestamp
  expires_at timestamp
  is_active boolean [default: true]
  description text
  created_at timestamp
  updated_at timestamp
}

Enum enum_coupon_type {
  percentage
  fixed
}

Table coupon_usages {
  id bigint [pk, increment]
  coupon_id bigint [ref: > coupons.id]
  user_id bigint [ref: > users.id]
  order_id bigint [ref: > orders.id]
  created_at timestamp
  updated_at timestamp
}

// ==================== REVIEWS ====================

Table reviews {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  user_id bigint [ref: > users.id]
  comment text
  rating int
  created_at timestamp
  updated_at timestamp
}

// ==================== NOTIFICATIONS ====================

Table notifications {
  id uuid [pk]
  type varchar
  notifiable_type varchar
  notifiable_id bigint
  data text
  read_at timestamp
  created_at timestamp
  updated_at timestamp
}

// ==================== SYSTEM TABLES ====================

Table sessions {
  id varchar [pk]
  user_id bigint [ref: > users.id]
  ip_address varchar
  user_agent text
  payload longtext
  last_activity int
}

Table jobs {
  id bigint [pk, increment]
  queue varchar
  payload longtext
  attempts tinyint
  reserved_at int
  available_at int
  created_at int
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar [unique]
  connection text
  queue text
  payload longtext
  exception longtext
  failed_at timestamp
}

Table cache {
  key varchar [pk]
  value mediumtext
  expiration int
}
